# Lang

./: .gitignore  Builtins.md  Main  README.md  code.sh  docsToHTML.sh  installAll.sh  langc  lintAll.sh  searchTodo.sh
BinArch/0.0.0.1/: Main
BinArch/0.0.0.2/: Main
Bnf/: Bnf.cabal  Bnf.hs  Overview.md  Readme.md  State.hs  StateT.hs
Bnf/Bnf/: BNF.hs  (+4 more)
Consumer/: Consumer.cabal  Consumer.hs  ConsumerL.hs  Normalizable.hs  Parser.hs  StdDef.hs
ExampleChecker/: ExampleChecker.cabal
Experiments/: Class.hs  Classes.hs  ControlFlow.hs  ObjectNotation.hs  State.hs
Formalisation/: Formalisatie.tex  Syntax.tex  Typering.tex
Graphs/: Graphs.cabal
Interpreter/: Architecture.md  Interpreter.cabal  Readme.md
Interpreter/Languate/: ADT.hs  Interpreter.hs  InterpreterDef.hs  ReadEvalPrint.hs  Tools.hs  Value.hs
Interpreter/Languate/Interpreter/: Application.hs  BuiltInValues.hs  BuiltIns.hs  EvalExpr.hs  EvalPattern.hs  Matching.hs  Tools.hs  Utils.hs
Interpreter/Languate/MaintenanceAccess/: TestInterpreter.hs  TestRep.hs
Loader/: Languate-Loader.cabal
Main/: Main.cabal
Main/Languate/: Main.hs  Pipeline.hs  Tintin.hs  Tools.hs
Main0/: Main  Main.hs
MarkUp/: MarkUp.cabal
Parser/: Parser.cabal  Plc.hs  Readme.md  Test.hs
Regex/: EscUtils.hs  Regex.cabal  Regex.hs
SemanticAnalysis/: Languate-SemanticAnalysis.cabal  Readme.md
SemanticAnalysis/Languate/: BuildTableOverview.hs  BuildTables.hs  BuiltIns.hs  CheckUtils.hs  Checks.hs  ClauseGenerators.hs  ExportBuilder.hs  FunctionGenerators.hs  FunctionTable.hs  FunctionTypeChecker.hs  MDGen.hs  ModuleTable.hs  ModuleTypeChecker.hs  Order.hs  Package2TypedPackage.hs  PackageTable.hs  PatternTypeChecker.hs  PrecedenceTable.hs  RightLeaningTree.hs  Sanitizer.hs  Semantal.hs  Signature.hs  SymbolTable.hs  TAST.hs  TableOverview.hs  TypeBinding.hs  TypeChecker.hs  TypeConstraint.hs  TypeTable.hs  TypeTools.hs  Typecast.hs  TypedLoader.hs  TypedPackage.hs  Typetable.hs
SemanticAnalysis/Languate/Checks/: CheckADT.hs  CheckClassDef.hs  CheckComment.hs  CheckFunction.hs  CheckInstanceDef.hs  CheckKind.hs  CheckLaw.hs  CheckReqTable.hs  CheckStatement.hs  CheckSubDef.hs  CheckSynDef.hs  CheckType.hs  CheckTypeTable.hs  CheckUtils.hs  CheckWorld.hs  Checks.hs  Checks0.hs  Checks1.hs
SemanticAnalysis/Languate/FuncGeneration/: Readme.md
SemanticAnalysis/Languate/FunctionTable/: Build.hs  BuildDocstringTable.hs  BuildFunctionTable.hs  BuildImplementationTable.hs  BuildImplementationTables.hs  ConstructADTFunctions.hs  Def.hs  Expr2Texpr.hs  FunctionTableDef.hs  FunctionsIn.hs  ModuleTraverser.hs  TypeClause.hs  TypeExpr.hs  TypePattern.hs  Utils.hs
SemanticAnalysis/Languate/Graphs/: DirectedGraph.hs  ExportCalculator.hs  Order.hs  PathFinder.hs  SearchCycles.hs  UnionFind.hs
SemanticAnalysis/Languate/ImportTable/: BuildAliasses.hs  ExportCalculator.hs  ImportTable.hs
SemanticAnalysis/Languate/KindChecker/: BuildKindTable.hs  ConstructKindConstraints.hs  KindChecks.hs  KindConstraint.hs  KindConstructor.hs  Solver.hs
SemanticAnalysis/Languate/MD/: Expr2MD.hs  MDGen.hs  TableOverview2MD.hs  TodoMD.hs
SemanticAnalysis/Languate/MaintenanceAccess/: OrderTest.hs  TestBind.hs  TestBuild.hs  TestBuild2.hs  TestBuildTypeLookupTable.hs  TestBuildTypeTable.hs  TestExpr2TExpr.hs  TestKindChecker.hs  TestKindConstraintBuilder.hs  TestLocalScope.hs  TestPrecedence.hs  TestSemantal.hs  TestSuperType.hs  TestTypeCheck.hs  TestTypeTable.hs  TestTypeTable2MD.hs
SemanticAnalysis/Languate/Precedence/: AnnotationStrip.hs  BuildPrecTable.hs  BuildPrecedenceTable.hs  CheckPrecStatements.hs  Expr2PrefExpr.hs  PrecTable2MD.hs  PrecTable2MU.hs  Precedence.hs  PrecedenceTable.hs  PrecedenceTableDef.hs  Utils.hs
SemanticAnalysis/Languate/TAST/: DefBuiltinTypes.hs  DefExpr.hs  DefFunction.hs  DefType.hs  Defaults.hs  ExprUtils.hs  KindUtils.hs  TypeUtils.hs
SemanticAnalysis/Languate/TypeConstraint/: Bind.hs  Def.hs  Utils.hs
SemanticAnalysis/Languate/TypeTable/: Bind.hs  BuildDocstringTable.hs  BuildFreeNameTable.hs  BuildKindTable.hs  BuildKnownTypes.hs  BuildRecursiveSTT.hs  BuildRequirementTable.hs  BuildSuperTypeTable.hs  BuildSuperTypeTableFull.hs  BuildSupertypeRelations.hs  BuildSupertypeTable.hs  BuildTypeLookupTable.hs  BuildTypeTable.hs  ExpandFSTT.hs  Expr2MD.hs  Extended.hs  FullSuperTypeTable2MD.hs  IsSuperType.hs  TypeTable.hs  TypeTable2MD.hs  TypeTable2mu.hs
SemanticAnalysis/Languate/TypeTable/Bind/: Bind.hs  Binding.hs  FastBind.hs  StMsg.hs  Substitute.hs  Unificate.hs
SemanticAnalysis/Languate/TypeTable/BuildSuperTT/: BuildSuperTypeTable.hs  BuildSuperTypeTableFull.hs  CheckReqs.hs  ExpandFSTT.hs  FixImplicitRequirements.hs  PropagateRequirements.hs
SemanticAnalysis/Languate/TypeTable/Checks/: CheckADT.hs  CheckClassDef.hs  CheckComment.hs  CheckFunction.hs  CheckInstanceDef.hs  CheckKind.hs  CheckLaw.hs  CheckPackage.hs  CheckReqTable.hs  CheckSubDef.hs  CheckSynDef.hs  CheckType.hs  CheckTypeTable.hs  CheckWorld.hs
SemanticAnalysis/Languate/TypeTable/KindChecker/: BindKind.hs  BuildKindTable.hs  ConstructKindConstraints.hs  KindChecks.hs  KindConstraint.hs  KindOf.hs  Solver.hs
SemanticAnalysis/Languate/Typechecker/: BuildSuperTypeTable.hs  SuperTypeTable.hs
SemanticAnalysis/Languate/Typetable/: BuildTypeTable.hs  BuildTypetable.hs  ModuleTraverser.hs  PropagateConstraints.hs  PropagateImplicitConstraints.hs  PropagateSupertypeConstraints.hs  PropagateSupertypes.hs  TypeLookupTable.hs  TypeTable.hs  TypeTable2MD.hs  TypetableDef.hs  ValidateTypeStatements.hs
SemanticAnalysis/Languate/Typetable/TypeLookupTable/: BuildKnownTypes.hs  BuildTypeLookupTable.hs  ModuleTraverser.hs  TypeLookupTableDef.hs  TypeLookupTableUtils.hs
SemanticAnalysis/Languate/Typing/: TypeExpression.hs  TypePattern.hs
SemanticAnalysis/Languate/Utils/: ExportCalculator.hs
Std/: Exceptions.hs  HumanUtils.hs  MarkDown.hs  Normalizable.hs  Prompt.hs  State.hs  StateT.hs  Std.cabal  StdDef.hs
Thoughts/: LanguateFlavouredMarkdown.md  TypeApplication is Binding.md
Tintin/: Tintin.cabal
workspace/: Manifest  Manifest.example
(+290 files in other folders)
