name:                Interpreter
version:             0.1.0.0
author:              pietervdvn
maintainer:          pietervdvn@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Languate.Value, Languate.Interpreter
  other-modules:      Languate.MaintenanceAccess.TestInterpreter, Languate.Interpreter.EvalExpr, Languate.Interpreter.BuiltInValues, Languate.Interpreter.EvalPattern
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7, Std >=0.1 && <0.2, Languate-Loader >=0.1 && <0.2, Languate-SemanticAnalysis >=0.2 && <0.3, containers >=0.5 && <0.6, Bnf >=0.1 && <0.2, Parser >=0.1 && <0.2, directory >=1.2 && <1.3
  default-language:    Haskell2010
