name:                Main
version:             0.1.0.0
author:              pietervdvn
maintainer:          pietervdvn@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable Main
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7, Std >=0.1 && <0.2, Parser >=0.1 && <0.2, Interpreter >=0.1 && <0.2, containers >=0.5 && <0.6, MarkUp >=0.1 && <0.2, Languate-Loader >=0.1 && <0.2, Bnf >=0.1 && <0.2, Languate-SemanticAnalysis >=0.1 && <0.2, Tintin >=0.1 && <0.2, time >=1.4 && <1.5, directory >=1.2 && <1.3, readline >=1.0 && <1.1
  default-language:    Haskell2010
