name: Languate-SemanticAnalysis
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
maintainer: pietervdvn@gmail.com
category: Language
author: pietervdvn
data-dir: ""

library
    build-depends: base ==4.*, Consumer ==0.1.*, containers ==0.5.*,
                   Parser ==0.1.*, Languate-Loader ==0.1.*, mtl ==2.1.*, Std ==0.1.*,
                   Bnf ==0.1.*
    exposed-modules: Languate.TAST
    exposed: True
    buildable: True
    other-modules: Languate.ImportTable.ExportCalculator
                   Languate.ImportTable.ImportTable
                   Languate.MaintenanceAccess.TestBuildTypeLookupTable
                   Languate.MaintenanceAccess.TestPrecedence
                   Languate.MaintenanceAccess.TestTypeTable2MD
                   Languate.Precedence.AnnotationStrip
                   Languate.Precedence.BuildPrecTable
                   Languate.Precedence.Expr2PrefExpr Languate.Precedence.Precedence
                   Languate.Precedence.PrecedenceTable
                   Languate.Precedence.PrecTable2MD
                   Languate.TypeTable.BuildTypeLookupTable
                   Languate.TypeTable.BuildTypeTable Languate.TypeTable.Expr2MD
                   Languate.TypeTable.TypeTable2MD Languate.TypeTable.TypeTable
