name:                Languate-SemanticAnalysis
version:             0.1.0.0
author:              pietervdvn
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:      Languate.TAST, Languate.TypeTable
  other-modules:        Languate.MDGen, Languate.BuildTables, Languate.Checks.CheckUtils, Languate.Checks.Checks0, Languate.MaintenanceAccess.TestBuild, Languate.TypeTable.BuildDocstringTable, Languate.TypeTable.TypeTable2MD, Languate.TypeTable.BuildTypeTable, Languate.TypeTable.BuildTypeLookupTable, Languate.TypeTable.BuildRequirementTable, Languate.TypeTable.Expr2MD, Languate.Precedence.BuildPrecTable, Languate.Precedence.PrecTable2MD, Languate.Precedence.Precedence, Languate.Precedence.PrecedenceTable, Languate.Precedence.AnnotationStrip, Languate.Precedence.Expr2PrefExpr, Languate.KindChecker.ConstructKindConstraints, Languate.KindChecker.KindConstraint, Languate.KindChecker.Solver, Languate.KindChecker.KindChecks, Languate.KindChecker.BuildKindTable, Languate.Graphs.ExportCalculator, Languate.Graphs.PathFinder, Languate.Graphs.SearchCycles
 build-depends:       base ==4.6.*, Std ==0.1.*, Parser ==0.1.*, Consumer ==0.1.*, Languate-Loader ==0.1.*, containers ==0.5.*, Bnf ==0.1.*, mtl ==2.1.*, Regex ==0.1.*, time==1.4.*
